netpol-evaluator/environment/manifests/scenario-11/deny-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: core-deny-all
  namespace: core
spec:
  podSelector: {}
  policyTypes:
    - Ingress
